feat: Add loading spinner

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <section class="content">
         <h1>Pokedex</h1>
 
+        <div id="loading" class="loading-spinner" style="display: none;"></div>
+
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
         </ol>
